# Eclipsicle

./: .gitignore  AGENTS.md  Agents.md  README.md  platformio.ini
data/: parameter_map.json
examples/: slide_green.led  slide_red.led  slideshow_example.led  timed_parameter.led
src/: AGENTS.md  animations.cpp  animations.h  audio.cpp  audio.h  config.cpp  config.h  controller_slave.cpp  ledManager.cpp  ledManager.h  led_master.cpp  led_slave.cpp  leds.cpp  leds.h  light_sword.cpp  master.cpp  master.h  meshnet.cpp  meshnet.h  motors.cpp  motors.h  oldMaster.cpp  paramTest.cpp  parameterManager.cpp  parameterManager.h  rgbw_test.cpp  sensors.cpp  sensors.h  serial.cpp  serial.h  shared.cpp  shared.h  simpLED.cpp  slave.cpp  slave.h  soundTest.cpp  speakerTest.cpp  stripState.cpp  stripState.h  tess_controller.cpp  (+3 more)
src/boardConfigs/: ledNodes.h  tessControllerPins.h  tessMenu.h
src/led_ui/: AGENTS.md  README.md  animation_map.json  animation_tab_widget.py  animation_tester.py  build_exe.py  data_tab_widget.py  debounceSlider.py  device_selector.py  environment.yml  fake_console.py  floatSlider.py  last_device.txt  led3dwidget.py  led_nodes copy.txt  led_nodes.txt  led_nodes_tess.txt  led_structure.json  ledbasic_tab_widget.py  ledsimwidget.py  main.py  mainwindow.py  (+12 more)
tests/: AGENTS.md  FallingBricks.cpp  FallingBricks.h  Makefile  falling_bricks_test.cpp  hsv_conversion_test.cpp  leds_stub.cpp  strip_state_test.cpp
tools/: AGENTS.md  Makefile  build.py  simulate_bricks.cpp  simulate_rle.cpp  simulate_strip.cpp
tools/led_sim/: CMakeLists.txt  strip_sim.cpp
(+88 files in other folders)
